@startuml
'https://plantuml.com/class-diagram
class App{
    +main()
    +start()
}
class Item {
    SimpleStringProperty description
    +int item_id
    +Boolean completion_status
    +LocalDate due_date
    +setDescription():void
    +setDue_date():void
    +setCompletion_status():void
}
class User {
    +Int active_list
    +setActiveList():void
    +getActiveList():void
    +addNewTodoList():void
    +removeExistingTodoList():void
    +setTitle():void
    +addItem(String description, Boolean completion_status, Date due_date):void
    +removeItem():void
    +editItemDescription(Item i, String description):void
    +editItemDueDate(Item i, String due_date):void
    +editItemCompletionStatus(Item i, Boolean completion_status):void
    +displayCompleteItems():void
    +displayIncompleteItems():void
    +displayAllItems():void
    +sortItemByDate():void
}
class MainPageController{
    +LoadButtonClicked(ActionEvent actionEvent):void
    +SaveButtonClicked(ActionEvent actionEvent):void
    +RemoveItemButtonClicked(ActionEvent actionEvent):void
    +EditItemButtonClicked(ActionEvent actionEvent):void
    +AddNewItemButtonClicked(ActionEvent actionEvent):void
    +displayAllItems(ActionEvent actionEvent):void
    +clearAllItems(ActionEvent actionEvent):void
    +displayCompleteItems(ActionEvent actionEvent):void
    +displayIncompleteItems(ActionEvent actionEvent):void
    +sortByDate(ActionEvent actionEvent):void
}
class EditItemPageController{
    +SaveItem(ActionEvent actionEvent):void
    +ReturnToMainPage(ActionEvent actionEvent):void
}

class ItemSaveIsScuffed{
    +int id
    +String description
    +Boolean completion_status = false
    +String due_date
    +setDescription():void
    +setDue_date():void
    +setCompletion_status():void
}
note left: gson does NOT like\nSimpleStringProperty.\nthis class only exists to\nget past that limitation.
javafx.Application <|-- App
javafx.Application <|-- MainPageController
javafx.Application <|-- EditItemPageController
javafx.Application <|-- EditTodoListPageController
MainPageController o-- User
EditItemPageController o-- User
EditTodoListPageController o-- User
ItemSaveIsScuffed o-- User
Item o-- User
TodoList o-- User
Item *-- TodoList

@enduml